--- a/p2-website-javascript/stylesheet.css
+++ b/p2-website-javascript/stylesheet.css
@@ -42,6 +42,25 @@ h1 {
         color: #FFFFFF;
       }
       /* styles.css */
+
+      .topnav {
+        display: flex;
+        justify-content: space-between; /* Of andere waarde zoals space-around of space-evenly */
+      }
+      
+      .topnav .dropdown {
+        flex: 1; /* Hiermee krijgen alle dropdown-items een gelijke flexibele breedte */
+      }
+      
+      .topnav .dropdown .dropdown-content {
+        display: none;
+        /* Stijlen voor dropdown-content */
+      }
+      
+      /* Voeg andere stijlen toe naar behoefte */
+      
+
+      /*/////////*/
    
       h1{color:#000000}/*white color*/
       .logo {
@@ -164,7 +183,7 @@ height: 75vh;
  
  
 .dropdown{
-  position: relative;
+  
   display: inline-block;
 }
  
@@ -179,7 +198,7 @@ border: none;
 .dropdown-content{
   display: none;
   background-color:#ffffff;
-  min-width: 100%;
+  
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 2;
   top:100%;
@@ -188,7 +207,6 @@ border: none;
 .dropdown-content a{
   float: none;
   color:#00a8c7;
-  padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -211,3 +229,25 @@ background-color: #ffffff;
   color: #00a8c7;
 }
  
+footer {
+  background-color: #CCFFFF;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  height: 40vh;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 100%;
+  left: 0; /* Add this property */
+  right: 0; /* Add this property */
+}
+
+
+.mijn-klasse {
+  display: flex; /* Of display: inline-flex; */
+  flex-wrap: wrap; /* Hiermee wordt de flex-container naar een nieuwe regel verplaatst als er geen ruimte meer is */
+}
+
+.mijn-klasse a {
+  margin-right: 20px; /* Voeg een rechtermarge toe tussen de items */
+}
