--- a/p2-website-javascript/styles.css
+++ b/p2-website-javascript/styles.css
@@ -315,3 +315,37 @@ footer {
   display: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+    text-align: center;
+}
+
+#weatherInfo {
+    margin-top: 20px;
+}
+
+.weather-icon {
+    width: 50px;
+    height: 50px;
+}
+
